@@ -2,7 +2,7 @@
 // Licensed under the GNU GPL Version 2.
 //
 // First added:  2005-10-14
-// Last changed: 2006-04-22
+// Last changed: 2006-08-08
 
 #include <dolfin.h>
 
@@ -46,7 +46,7 @@ public:
   }
 
   /// Right-hand side, mono-adaptive version
-  void f(const DenseVector& u, real t, DenseVector& y)
+  void f(const uBlasVector& u, real t, uBlasVector& y)
   {
     for (unsigned int i = 0; i < N; i++)
     {
@@ -65,7 +65,7 @@ public:
   }
 
   /// Right-hand side, multi-adaptive version
-  real f(const DenseVector& u, real t, unsigned int i)
+  real f(const uBlasVector& u, real t, unsigned int i)
   {
     const real ui = u(i);
     
