@@ -1,20 +1,0 @@
-CFLAGS  = `dolfin-config --cflags`
-LIBS    = `dolfin-config --libs`
-CXX     = `dolfin-config --compiler`
-LINK    = `dolfin-config --linker`
-
-DEST    = dolfin-ode-bistable
-OBJECTS = main.o
-
-all: $(DEST)
-
-install:
-
-clean:
-	-rm -f *.o core *.core $(OBJECTS) $(DEST)
-
-$(DEST): $(OBJECTS)
-	 $(LINK) -o $@ $(OBJECTS) $(CFLAGS) $(LIBS)
-
-.cpp.o:
-	$(CXX) $(CFLAGS) -c $<
