@@ -1,7 +1,0 @@
-Running the program:
-
-	./dolfin-ode-bistable
-
-To visualize the solution:
-
-	dx -edit dolfin
